# matrise_arbeid

./: .gitignore  main.py  pca_matrise.ipynb  pyproject.toml  raster_conversion_tools.ipynb
